[package]
name = "nananiji-calculator"
version = "0.1.0"
authors = ["komori <ikamat.kmr@gmail.com>"]
edition = "2018"
description = "Generate mathematical nananiji expression for any given integers"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]
test = true
doctest = true
doc = true

[[bin]]
name = "nananiji-calculator"
path = "src/bin/main.rs"

[[bin]]
name = "nananiji-calculator-server"
path = "src/bin/lambda.rs"
required-features = ["lambda"]

[dependencies]
anyhow = "1.0"
bincode = "1.3"
clap = "2.33"
env_logger = "0.8"
fxhash = "0.2"
itertools = "0.10"
lambda_runtime = "0.2"
num = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-error = "0.2"
